--- a/public/home.html
+++ b/public/home.html
@@ -10,7 +10,7 @@
 
 <body>
     <p>You are logged in!</p>
-    <h1>Hana was hier</h1>
+    <h1>Hana was hier!</h1>
 
     <script>
         firebase.auth.onAuthStateChanged(user => {
