--- a/public/1-index.html
+++ b/public/1-index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="ie=edge" http-equiv="X-UA-Compatible" />
-    <link href="https://fonts.googleapis.com/css?family=Baskervville|Open+Sans|Roboto&display=swap" rel="stylesheet" />
+    <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif&display=swap" rel="stylesheet">
     <!-- bootstrap css -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
     <!-- font awesome -->
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Favicons -->
     <link href="#" rel="apple-touch-icon" sizes="180x180" />
     <link href="#" rel="icon" sizes="32x32" type="image/png" />
@@ -20,29 +20,31 @@
     <!-- main css -->
     <link href="stylesheets/style.css" rel="stylesheet" />
     <link href="stylesheets/all.css" rel="stylesheet" />
-    <title>HW winker Project</title>
+    <link href="stylesheets/counter.css" rel="stylesheet" />
+
+    <title>HWwinkerHome</title>
 </head>
 
 <body>
-    <!-- header -->
-    <header class="header" style="background-color: cornsilk;">
+
+    <header>
         <!-- navbar  -->
-        <nav class="navbar navbar-expand-lg px-4">
-            <a class="navbar-brand" href="#"><img alt="" src="img/logo.svg" style="width: 50px; height: 50px;" /></a>
+        <nav class="navbar navbar-expand-lg navbar-light px-4">
+            <a class="navbar-brand" href="#"><img alt="logo" src="img/logo.svg" style="width: 15px; height: 15px;"></a>
             <button class="navbar-toggler" data-target="#myNav" data-toggle="collapse" type="button">
-          <span class="toggler-icon">
-            <i class="fas fa-bars"></i>
-          </span>
-        </button>
-            <div class="collapse navbar-collapse" id="myNav">
-                <ul class="navbar-nav m-auto text-capitalize">
-                    <li class="nav-item active mx-lg-5">
+                    <span class="toggler-icon">
+                        <i class="fas fa-bars"></i>
+                    </span>
+                </button>
+            <div class="collapse navbar-collapse navbar-light" id="myNav">
+                <ul class="navbar-nav ml-auto ">
+                    <li class="nav-item active mx-lg-4">
                         <a class="nav-link" href="1-index.html">Home</a>
                     </li>
-                    <li class="nav-item mx-lg-5">
-                        <a class="nav-link " href="2-product.html">Store</a>
+                    <li class="nav-item mx-lg-4">
+                        <a class="nav-link " href="2-product-men.html">Store</a>
                     </li>
-                    <li class="nav-item mx-lg-5">
+                    <li class="nav-item mx-lg-4">
                         <a class="nav-link" href="7-contact.html">Contact</a>
                     </li>
                 </ul>
@@ -51,57 +53,82 @@
                     <div class="nav-info align-items-center  d-flex justify-content-between mx-md-2" id="cart-info">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="btn btn-md btn-danger text-light ml-5" href="6-cart.html">
+                                <a class="btn btn-sm rounded-pill ml-6" href="6-cart.html">
                                     <i aria-hidden="true" class="fa fa-cart-arrow-down"></i> Your Cart</a>
                             </li>
                         </ul>
                     </div>
-                    <div class="nav-info align-items-center d-flex justify-content-between mx-md-6">
-                        <span class="signin-info_icon mx-md-3">
-                <a
-                  class="btn btn-md btn-info text-light ml-5"
-                  href="5-sign_up_form.html"
-                  >Log in</a
-                >
-                <!-- <i class="fas fa-sign-in"></i> -->
-              </span>
+                    <div class="nav-info align-items-center  d-flex justify-content-between mx-md-2" id="cart-info">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <a class="btn btn-sm btn-info rounded-pill text-light ml-6" href="4-sign-in.html">
+                                    <i class="fa fa-sign-in" aria-hidden="true"></i>Sign In</a>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="nav-info align-items-center d-flex justify-content-between mx-md-6">
-                        <span class="signin-info_icon mx-md-3">
-                <a
-                  class="btn btn-md btn-success text-light ml-5"
-                  href="5-sign_up_form.html"
-                  >Join free</a
-                >
-                <!-- <i class="fas fa-sign-in"></i> -->
-              </span>
+                    <div class="nav-info align-items-center  d-flex justify-content-between mx-md-2" id="cart-info">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <a class="btn btn-sm btn-danger rounded-pill text-light ml-6" href="5-sign-up.html">
+                                    <i class="fa fa-sign-out-alt" aria-hidden="true"></i>Sign Up</a>
+                            </li>
+                        </ul>
                     </div>
                     <!-- end info in the left -->
                 </div>
             </div>
         </nav>
         <!-- end of nav -->
-        <!-- banner  -->
-        <div class="container-fluid">
-            <div class="row max-height justify-content-center align-items-center">
-                <div class="col-10 mx-auto banner text-center">
-                    <h1 class="text-capitalize">
-                        console.log
-                        <strong class="banner-title ">('hello world !')</strong>
-                    </h1>
-                    <a class="btn banner-link text-uppercase my-2" href="2-.product.html">explore</a
-            >
-          </div>
-        </div>
-      </div>
-      <!--end of  banner  -->
     </header>
     <!-- header -->
+    <main class="product-general">
+        <!--counter start-->
+        <div class="container counter" style="width: 900px; height: 450px;">
+            <div class="row justify-content-center mt-5 mb-2" style="padding-top: 60px">
+                <h1 class="">
+                    <strong>Subscribed  to  get  speacial  discount  max  70%
+                        </strong>
+                </h1>
+            </div>
+            <div class="row justify-content-center rounded-pill mt-4" id="countdown" style="padding-bottom: 100px; font-size: 70px"></div>
+            <div class="row mt-1 pb-1">
+                <div class="col-md-12 text-center">
+                    <a class="btn btn-danger text-light btn-lg " src="5-sign-up.html">REGISTER NOW</a>
+                </div>
+            </div>
+        </div>
+        <!--counter end-->
+        <div class="product-infor">
+            <div class="container mt-5">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="outer-div">
+                            <div class="inner-div1">
+                                <a href="2-product-men.html">
+                                    <h1 class="zoom-box-text">FOR MAN</h1>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="outer-div">
+                            <div class="inner-div2">
+                                <a href="3-product-women.html">
+                                    <h1 class="zoom-box-text">FOR WOMEN</h1>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </main>
 
     <!-- bootstrap js -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script src="js/app.js"></script>
-  </body>
+    <script src="javascripts/counter.js"></script>
+    <script src="javascripts/app.js"></script>
+</body>
+
 </html>
