--- a/public/1-index.html
+++ b/public/1-index.html
@@ -22,7 +22,7 @@
     <link href="stylesheets/all.css" rel="stylesheet" />
     <link href="stylesheets/counter.css" rel="stylesheet" />
 
-    <title>HWwinkerHome</title>
+    <title>Hello World Clothes</title>
 </head>
 
 <body>
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="1-index.html">Home</a>
                     </li>
                     <li class="nav-item mx-lg-4">
-                        <a class="nav-link " href="2-product-men.html">Store</a>
+                        <a class="nav-link " href="8-product-store.html">Store</a>
                     </li>
                     <li class="nav-item mx-lg-4">
                         <a class="nav-link" href="7-contact.html">Contact</a>
@@ -83,8 +83,8 @@
     <!-- header -->
     <main class="product-general">
         <!--counter start-->
-        <div class="container counter" style="width: 900px; height: 450px;">
-            <div class="row justify-content-center mt-5 mb-2" style="padding-top: 60px">
+        <div class="counter">
+            <div class="row justify-content-center mb-2" style="padding-top: 60px">
                 <h1 class="">
                     <strong>Subscribed  to  get  speacial  discount  max  70%
                         </strong>
@@ -105,7 +105,7 @@
                         <div class="outer-div">
                             <div class="inner-div1">
                                 <a href="2-product-men.html">
-                                    <h1 class="zoom-box-text">FOR MAN</h1>
+                                    <h1 class="zoom-box-text">SHOP MAN</h1>
                                 </a>
                             </div>
                         </div>
@@ -113,14 +113,15 @@
                     <div class="col-md-6">
                         <div class="outer-div">
                             <div class="inner-div2">
-                                <a href="3-product-women.html">
-                                    <h1 class="zoom-box-text">FOR WOMEN</h1>
+                                <a href="3-produc-women.html">
+                                    <h1 class="zoom-box-text">SHOP WOMEN</h1>
                                 </a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>    
     </main>
 
     <!-- bootstrap js -->
