--- a/public/6-cart.html
+++ b/public/6-cart.html
@@ -89,8 +89,8 @@
                     <div class="px-4 px-lg-0">
                         <!-- For demo purpose -->
                         <div class="container text-white py-5 text-center">
-                            <h1 class="display-4">Final payment</h1>
-                            <p class="lead mb-0">Thank you for chosen our products</p>
+                            <h1 class="display-4 text-dark">Final payment</h1>
+                            <p class="lead mb-0 text-dark">Thank you for chosen our products</p>
                         </div>
                         <!-- End -->
                         <div class="pb-5">
