--- a/public/7-contact.html
+++ b/public/7-contact.html
@@ -83,7 +83,7 @@
     <header>
         <!-- navbar  -->
         <nav class="navbar navbar-expand-lg navbar-light px-4">
-            <a class="navbar-brand" href="#"><img alt="logo" src="img/logo.svg" style="width: 15px; height: 15px;"></a>
+            <a class="navbar-brand" href="1-index.html"><img class="ml-5" alt="logo" src="img/logo.svg" style="width: 50px; height: 50px;"></a>
             <button class="navbar-toggler" data-target="#myNav" data-toggle="collapse" type="button">
                 <span class="toggler-icon">
                     <i class="fas fa-bars"></i>
@@ -134,7 +134,7 @@
         <!-- end of nav -->
     </header>
     <section class=" py-5" id="about">
-        <div class="product-general">
+        <div class="product-general container">
             <div class="row">
                 <div class="col-10 mx-auto col-md-6 my-5">
                     <h1 class="text-capitalize">
