--- a/public/8-product-store.html
+++ b/public/8-product-store.html
@@ -258,7 +258,7 @@
     <header>
         <!-- navbar  -->
         <nav class="navbar navbar-expand-lg navbar-light px-4">
-            <a class="navbar-brand" href="#"><img alt="logo" src="img/logo.svg" style="width: 15px; height: 15px;"></a>
+            <a class="navbar-brand" href="#"><img alt="logo" src="img/logo.svg" style="width: 50px; height: 50px;"></a>
             <button class="navbar-toggler" data-target="#myNav" data-toggle="collapse" type="button">
                     <span class="toggler-icon">
                         <i class="fas fa-bars"></i>
@@ -319,14 +319,6 @@
                     </div>
                 </div>
                 <!-- end of section title -->
-                <!--filter buttons -->
-                <div class="row">
-                    <div class=" col-lg-8 mx-auto d-flex justify-content-around my-2 sortBtn flex-wrap">
-                        <a href="3-product-men.html" class="btn btn-outline-secondary btn-outline-info  filter-btn m-2" data-filter="man"># For man</a>
-                        <a href="3-product-women.html" class="btn btn-outline-secondary btn-outline-info  filter-btn m-2" data-filter="women"># For women</a>
-                        <a href="3-product-women.html" class="btn btn-outline-secondary btn-outline-info  filter-btn m-2" data-filter="accessories"># Accessories</a>
-                    </div>
-                </div>
                 <!-- search box -->
                 <div class="row">
                     <div class="col-10 mx-auto col-md-6">
@@ -342,7 +334,7 @@
                 </div>
                 <!-- search box end -->
                 <div class="container">
-                    <h3 class="h3  text-light"> New Arrived </h3>
+                    <h3 class="h3  text-dark mb-4 mt-4"><bold> MEN </bold></h3>
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
                             <div class="product-grid4">
@@ -424,6 +416,110 @@
                                     <a href="#">
                                         <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-4.jpg">
                                         <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-3.jpg">
+                                    </a>
+                                    <ul class="social">
+                                        <li><a href="#" data-tip="Quick View"><i class="fa fa-eye"></i></a></li>
+                                        <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                                        <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                                    </ul>
+                                    <span class="product-new-label">New</span>
+                                    <span class="product-discount-label">-10%</span>
+                                </div>
+                                <div class="product-content">
+                                    <h3 class="title"><a href="#">Women's Black Top</a></h3>
+                                    <div class="price">
+                                        $14.40
+                                        <span>$16.00</span>
+                                    </div>
+                                    <a class="add-to-cart" href="">ADD TO CART</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <h3 class="h3  text-dark mb-4 mt-4"><strong>WOMEN</strong> </h3>
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6">
+                            <div class="product-grid4">
+                                <div class="product-image4">
+                                    <a href="#">
+                                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-8.jpg">
+                                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-7.jpg">
+                                    </a>
+                                    <ul class="social">
+                                        <li><a href="#" data-tip="Quick View"><i class="fa fa-eye"></i></a></li>
+                                        <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                                        <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                                    </ul>
+                                    <span class="product-new-label">New</span>
+                                    <span class="product-discount-label">-10%</span>
+                                </div>
+                                <div class="product-content">
+                                    <h3 class="title"><a href="#">Women's Black Top</a></h3>
+                                    <div class="price">
+                                        $14.40
+                                        <span>$16.00</span>
+                                    </div>
+                                    <a class="add-to-cart" href="">ADD TO CART</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="product-grid4">
+                                <div class="product-image4">
+                                    <a href="#">
+                                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-2.jpg">
+                                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-1.jpg">
+                                    </a>
+                                    <ul class="social">
+                                        <li><a href="#" data-tip="Quick View"><i class="fa fa-eye"></i></a></li>
+                                        <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                                        <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                                    </ul>
+                                    <span class="product-discount-label">-12%</span>
+                                </div>
+                                <div class="product-content">
+                                    <h3 class="title"><a href="#">Men's Blue Shirt</a></h3>
+                                    <div class="price">
+                                        $17.60
+                                        <span>$20.00</span>
+                                    </div>
+                                    <a class="add-to-cart" href="">ADD TO CART</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="product-grid4">
+                                <div class="product-image4">
+                                    <a href="#">
+                                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-7.jpg">
+                                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-8.jpg">
+                                    </a>
+                                    <ul class="social">
+                                        <li><a href="#" data-tip="Quick View"><i class="fa fa-eye"></i></a></li>
+                                        <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                                        <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                                    </ul>
+                                    <span class="product-new-label">New</span>
+                                    <span class="product-discount-label">-10%</span>
+                                </div>
+                                <div class="product-content">
+                                    <h3 class="title"><a href="#">Women's Black Top</a></h3>
+                                    <div class="price">
+                                        $14.40
+                                        <span>$16.00</span>
+                                    </div>
+                                    <a class="add-to-cart" href="">ADD TO CART</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="product-grid4">
+                                <div class="product-image4">
+                                    <a href="#">
+                                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-1.jpg">
+                                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-2.jpg">
                                     </a>
                                     <ul class="social">
                                         <li><a href="#" data-tip="Quick View"><i class="fa fa-eye"></i></a></li>
