--- a/public/3-produc-women.html
+++ b/public/3-produc-women.html
@@ -203,7 +203,7 @@
         }
         
         .product-grid4 .price {
-            color: #ffffff;
+            color: black;
             font-size: 17px;
             font-weight: 700;
             margin: 0 2px 15px 0;
@@ -211,7 +211,7 @@
         }
         
         .product-grid4 .price span {
-            color: #909090;
+            color: black;
             font-size: 13px;
             font-weight: 400;
             letter-spacing: 0;
