--- a/public/1-index.html
+++ b/public/1-index.html
@@ -93,7 +93,7 @@
             <div class="row justify-content-center rounded-pill mt-4" id="countdown" style="padding-bottom: 100px; font-size: 70px"></div>
             <div class="row mt-1 pb-1">
                 <div class="col-md-12 text-center">
-                    <a class="btn btn-danger text-light btn-lg " src="5-sign-up.html">REGISTER NOW</a>
+                    <a class="btn btn-danger text-light btn-lg " href="5-sign-up.html">REGISTER NOW</a>
                 </div>
             </div>
         </div>
