--- a/public/3-produc-women.html
+++ b/public/3-produc-women.html
@@ -270,7 +270,7 @@
                         <a class="nav-link" href="1-index.html">Home</a>
                     </li>
                     <li class="nav-item mx-lg-4">
-                        <a class="nav-link " href="2-product-men.html">Store</a>
+                        <a class="nav-link " href="8-product-store.html">Store</a>
                     </li>
                     <li class="nav-item mx-lg-4">
                         <a class="nav-link" href="7-contact.html">Contact</a>
@@ -315,18 +315,11 @@
                 <!-- section title -->
                 <div class="row">
                     <div class="col-10 mx-auto col-sm-6 text-center">
-                        <h1 class="text-capitalize">our <strong class="banner-title ">store</strong></h1>
+                        <h1 class="text-capitalize">Shop <strong class="banner-title ">Women</strong></h1>
                     </div>
                 </div>
                 <!-- end of section title -->
-                <!--filter buttons -->
-                <div class="row">
-                    <div class=" col-lg-8 mx-auto d-flex justify-content-around my-2 sortBtn flex-wrap">
-                        <a href="3-product_detail.html" class="btn btn-outline-secondary btn-outline-info  filter-btn m-2" data-filter="man"># For man</a>
-                        <a href="3-product_detail.html" class="btn btn-outline-secondary btn-outline-info  filter-btn m-2" data-filter="women"># For women</a>
-                        <a href="3-product_detail.html" class="btn btn-outline-secondary btn-outline-info  filter-btn m-2" data-filter="accessories"># Accessories</a>
-                    </div>
-                </div>
+
                 <!-- search box -->
                 <div class="row">
                     <div class="col-10 mx-auto col-md-6">
@@ -342,7 +335,7 @@
                 </div>
                 <!-- search box end -->
                 <div class="container">
-                    <h3 class="h3  text-light"> New Arrived </h3>
+                    <h3 class="h3  text-dark"> New Arrived </h3>
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
                             <div class="product-grid4">
