--- a/public/5-sign-up.html
+++ b/public/5-sign-up.html
@@ -180,7 +180,7 @@
                         <a class="nav-link" href="1-index.html">Home</a>
                     </li>
                     <li class="nav-item mx-lg-4">
-                        <a class="nav-link " href="2-product-men.html">Store</a>
+                        <a class="nav-link " href="8-product-store.html">Store</a>
                     </li>
                     <li class="nav-item mx-lg-4">
                         <a class="nav-link" href="7-contact.html">Contact</a>
