--- a/public/7-contact.html
+++ b/public/7-contact.html
@@ -83,54 +83,54 @@
     <header>
         <!-- navbar  -->
         <nav class="navbar navbar-expand-lg navbar-light px-4">
-            <a class="navbar-brand" href="1-index.html"><img class="ml-5" alt="logo" src="img/logo.svg" style="width: 50px; height: 50px;"></a>
-            <button class="navbar-toggler" data-target="#myNav" data-toggle="collapse" type="button">
-                <span class="toggler-icon">
-                    <i class="fas fa-bars"></i>
-                </span>
-            </button>
-            <div class="collapse navbar-collapse navbar-light" id="myNav">
-                <ul class="navbar-nav ml-auto ">
-                    <li class="nav-item active mx-lg-4">
-                        <a class="nav-link" href="1-index.html">Home</a>
-                    </li>
-                    <li class="nav-item mx-lg-4">
-                        <a class="nav-link " href="2-product-men.html">Store</a>
-                    </li>
-                    <li class="nav-item mx-lg-4">
-                        <a class="nav-link" href="7-contact.html">Contact</a>
-                    </li>
-                </ul>
-                <!-- info in the left -->
-                <div class="nav-info-items d-none d-md-flex ">
-                    <div class="nav-info align-items-center  d-flex justify-content-between mx-md-2" id="cart-info">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a class="btn btn-sm rounded-pill ml-6" href="6-cart.html">
-                                    <i aria-hidden="true" class="fa fa-cart-arrow-down"></i> Your Cart</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="nav-info align-items-center  d-flex justify-content-between mx-md-2" id="cart-info">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a class="btn btn-sm btn-info rounded-pill text-light ml-6" href="4-sign-in.html">
-                                    <i class="fa fa-sign-in" aria-hidden="true"></i>Sign In</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="nav-info align-items-center  d-flex justify-content-between mx-md-2" id="cart-info">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a class="btn btn-sm btn-danger rounded-pill text-light ml-6" href="5-sign-up.html">
-                                    <i class="fa fa-sign-out-alt" aria-hidden="true"></i>Sign Up</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!-- end info in the left -->
-                </div>
-            </div>
-        </nav>
+          <a class="navbar-brand" href="#"><img alt="logo" src="img/logo.svg" style="width: 50px; height: 50px;"></a>
+          <button class="navbar-toggler" data-target="#myNav" data-toggle="collapse" type="button">
+                  <span class="toggler-icon">
+                      <i class="fas fa-bars"></i>
+                  </span>
+              </button>
+          <div class="collapse navbar-collapse navbar-light" id="myNav">
+              <ul class="navbar-nav ml-auto ">
+                  <li class="nav-item active mx-lg-4">
+                      <a class="nav-link" href="1-index.html">Home</a>
+                  </li>
+                  <li class="nav-item mx-lg-4">
+                      <a class="nav-link " href="8-product-store.html">Store</a>
+                  </li>
+                  <li class="nav-item mx-lg-4">
+                      <a class="nav-link" href="7-contact.html">Contact</a>
+                  </li>
+              </ul>
+              <!-- info in the left -->
+              <div class="nav-info-items d-none d-md-flex ">
+                  <div class="nav-info align-items-center  d-flex justify-content-between mx-md-2" id="cart-info">
+                      <ul class="navbar-nav ml-auto">
+                          <li class="nav-item">
+                              <a class="btn btn-sm rounded-pill ml-6" href="6-cart.html">
+                                  <i aria-hidden="true" class="fa fa-cart-arrow-down"></i> Your Cart</a>
+                          </li>
+                      </ul>
+                  </div>
+                  <div class="nav-info align-items-center  d-flex justify-content-between mx-md-2" id="cart-info">
+                      <ul class="navbar-nav ml-auto">
+                          <li class="nav-item">
+                              <a class="btn btn-sm btn-info rounded-pill text-light ml-6" href="4-sign-in.html">
+                                  <i class="fa fa-sign-in" aria-hidden="true"></i>Sign In</a>
+                          </li>
+                      </ul>
+                  </div>
+                  <div class="nav-info align-items-center  d-flex justify-content-between mx-md-2" id="cart-info">
+                      <ul class="navbar-nav ml-auto">
+                          <li class="nav-item">
+                              <a class="btn btn-sm btn-danger rounded-pill text-light ml-6" href="5-sign-up.html">
+                                  <i class="fa fa-sign-out-alt" aria-hidden="true"></i>Sign Up</a>
+                          </li>
+                      </ul>
+                  </div>
+                  <!-- end info in the left -->
+              </div>
+          </div>
+      </nav>
         <!-- end of nav -->
     </header>
     <section class=" py-5" id="about">
