--- a/public/1-index.html
+++ b/public/1-index.html
@@ -11,16 +11,16 @@
     <!-- font awesome -->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Favicons -->
-    <link href="#" rel="apple-touch-icon" sizes="180x180" />
+   <!--  <link href="#" rel="apple-touch-icon" sizes="180x180" />
     <link href="#" rel="icon" sizes="32x32" type="image/png" />
     <link href="#" rel="icon" sizes="16x16" type="image/png" />
     <link href="#" rel="manifest" />
     <link color="#563d7c" href="#" rel="mask-icon" />
     <link href="#" rel="icon" />
-    <!-- main css -->
+     main css --> 
     <link href="stylesheets/style.css" rel="stylesheet" />
-    <link href="stylesheets/all.css" rel="stylesheet" />
-    <link href="stylesheets/counter.css" rel="stylesheet" />
+  <!--   <link href="stylesheets/all.css" rel="stylesheet" />
+    <link href="stylesheets/counter.css" rel="stylesheet" /> -->
 
     <title>Hello World Clothes</title>
 </head>
@@ -124,12 +124,16 @@
         </div>    
     </main>
 
+
+
+  
+</script>
+
     <!-- bootstrap js -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script src="javascripts/counter.js"></script>
-    <script src="javascripts/app.js"></script>
+   
 </body>
 
 </html>
