--- a/public/3-produc-women.html
+++ b/public/3-produc-women.html
@@ -11,16 +11,16 @@
     <!-- font awesome -->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Favicons -->
-    <link href="#" rel="apple-touch-icon" sizes="180x180" />
+  <!--   <link href="#" rel="apple-touch-icon" sizes="180x180" />
     <link href="#" rel="icon" sizes="32x32" type="image/png" />
     <link href="#" rel="icon" sizes="16x16" type="image/png" />
     <link href="#" rel="manifest" />
     <link color="#563d7c" href="#" rel="mask-icon" />
-    <link href="#" rel="icon" />
+    <link href="#" rel="icon" /> -->
     <!-- main css -->
     <link href="stylesheets/style.css" rel="stylesheet" />
-    <link href="stylesheets/all.css" rel="stylesheet" />
-    <link href="stylesheets/counter.css" rel="stylesheet" />
+   <!--  <link href="stylesheets/all.css" rel="stylesheet" />
+    <link href="stylesheets/counter.css" rel="stylesheet" /> -->
     <style>
         .product-grid4,
         .product-grid4 .product-image4 {
