--- a/public/4-sign-in.html
+++ b/public/4-sign-in.html
@@ -11,16 +11,16 @@
     <!-- font awesome -->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Favicons -->
-    <link href="#" rel="apple-touch-icon" sizes="180x180" />
+   <!--  <link href="#" rel="apple-touch-icon" sizes="180x180" />
     <link href="#" rel="icon" sizes="32x32" type="image/png" />
     <link href="#" rel="icon" sizes="16x16" type="image/png" />
     <link href="#" rel="manifest" />
     <link color="#563d7c" href="#" rel="mask-icon" />
-    <link href="#" rel="icon" />
+    <link href="#" rel="icon" /> -->
     <!-- main css -->
     <link href="stylesheets/style.css" rel="stylesheet" />
-    <link href="stylesheets/all.css" rel="stylesheet" />
-    <link href="stylesheets/counter.css" rel="stylesheet" />
+   <!--  <link href="stylesheets/all.css" rel="stylesheet" />
+    <link href="stylesheets/counter.css" rel="stylesheet" /> -->
     <style>
         /* body {
             width: 100%;
@@ -221,7 +221,7 @@
     <!-- header -->
     <div class="product-general">
         <div id="logreg-forms">
-            <form class="form-signin">
+            <form id="form-signin">
                 <h1 class=" h3 mb-3 font-weight-normal" style="text-align: center">Sign In</h1>
                 <div class="social-login">
                     <button class="btn facebook-btn social-btn" type="button">
@@ -255,14 +255,44 @@
             </form>
         </div>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-firestore.js"></script>
+
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyAQjj4Tm0tDFYgjAucFxrLJ0RRGrM-Qhq0",
+    authDomain: "helloworldtest-e4deb.firebaseapp.com",
+    databaseURL: "https://helloworldtest-e4deb.firebaseio.com",
+    projectId: "helloworldtest-e4deb",
+    
+    appId: "1:222966073974:web:2b29e80dd12900bd162d57",
+    measurementId: "G-56TWC4FKN4"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+
+  // make auth and firestore reference
+  const auth = firebase.auth();
+  const db = firebase.firestore();
+
+  // update firestore settings
+  db.settings({});
+</script>
 
     <!-- bootstrap js -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script src="javascripts/counter.js"></script>
-    <script src="javascripts/app.js"></script>
-    <script src="javascripts/login.js"></script>
+    <script src="javascripts/auth2.js"></script>
+    
 </body>
 
 </html>
