--- a/public/7-contact.html
+++ b/public/7-contact.html
@@ -11,15 +11,15 @@
     <!-- font awesome -->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <!-- Favicons -->
-    <link href="#" rel="apple-touch-icon" sizes="180x180" />
+   <!--  <link href="#" rel="apple-touch-icon" sizes="180x180" />
     <link href="#" rel="icon" sizes="32x32" type="image/png" />
     <link href="#" rel="icon" sizes="16x16" type="image/png" />
     <link href="#" rel="manifest" />
     <link color="#563d7c" href="#" rel="mask-icon" />
-    <link href="#" rel="icon" />
+    <link href="#" rel="icon" /> -->
     <!-- main css -->
-    <link href="css/style.css" rel="stylesheet" />
-    <link href="css/all.css" rel="stylesheet" />
+    <!-- <link href="css/style.css" rel="stylesheet" /> -->
+   
     <title>HW winker Contact</title>
     <style>
         #contatti {
@@ -284,7 +284,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script src="js/app.js"></script>
+   
 </body>
 
 </html>
