hello world account firebase

--- a/public/5-sign-up.html
+++ b/public/5-sign-up.html
@@ -263,13 +263,14 @@
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyAQjj4Tm0tDFYgjAucFxrLJ0RRGrM-Qhq0",
-    authDomain: "helloworldtest-e4deb.firebaseapp.com",
-    databaseURL: "https://helloworldtest-e4deb.firebaseio.com",
-    projectId: "helloworldtest-e4deb",
-    
-    appId: "1:222966073974:web:2b29e80dd12900bd162d57",
-    measurementId: "G-56TWC4FKN4"
+    apiKey: "AIzaSyCafGFY62Xw5LV2ikv0ALXp4GEmrXZUbgY",
+    authDomain: "helloworldclothes-app.firebaseapp.com",
+    databaseURL: "https://helloworldclothes-app.firebaseio.com",
+    projectId: "helloworldclothes-app",
+    storageBucket: "helloworldclothes-app.appspot.com",
+    messagingSenderId: "250508679608",
+    appId: "1:250508679608:web:06f8236c7b3767d986174d",
+    measurementId: "G-KJP8WSK61Q"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
