--- a/public/4-sign-in.html
+++ b/public/4-sign-in.html
@@ -256,7 +256,7 @@
         </div>
     </div>
     <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-firestore.js"></script>
 
 
@@ -265,15 +265,17 @@
 <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-analytics.js"></script>
 
 <script>
-  // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyAQjj4Tm0tDFYgjAucFxrLJ0RRGrM-Qhq0",
-    authDomain: "helloworldtest-e4deb.firebaseapp.com",
-    databaseURL: "https://helloworldtest-e4deb.firebaseio.com",
-    projectId: "helloworldtest-e4deb",
-    
-    appId: "1:222966073974:web:2b29e80dd12900bd162d57",
-    measurementId: "G-56TWC4FKN4"
+  
+ // Your web app's Firebase configuration
+ var firebaseConfig = {
+    apiKey: "AIzaSyCafGFY62Xw5LV2ikv0ALXp4GEmrXZUbgY",
+    authDomain: "helloworldclothes-app.firebaseapp.com",
+    databaseURL: "https://helloworldclothes-app.firebaseio.com",
+    projectId: "helloworldclothes-app",
+    storageBucket: "helloworldclothes-app.appspot.com",
+    messagingSenderId: "250508679608",
+    appId: "1:250508679608:web:06f8236c7b3767d986174d",
+    measurementId: "G-KJP8WSK61Q"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
