--- a/public/profile.html
+++ b/public/profile.html
@@ -23,28 +23,28 @@
                 <table class="table table-user-information ">
                     <tbody>
                         <tr>
-                            <td>Date of Birth:</td>
-                            <td id="date-of-birth"></td>
+                            <td class="col-md-4">Date of Birth:</td>
+                            <td class="col-md-8" id="date-of-birth"></td>
                         </tr>
                         <tr>
-                            <td>Gender:</td>
-                            <td id="gender"></td>
+                            <td class="col-md-4">Gender:</td>
+                            <td class="col-md-8" id="gender"></td>
                         </tr>
                         <tr>
-                            <td>Address:</td>
-                            <td id="address"></td>
+                            <td class="col-md-4">Address:</td>
+                            <td class="col-md-8" id="address"></td>
                         </tr>
                         <tr>
-                            <td>Email: </td>
-                            <td id="email"></td>
+                            <td class="col-md-4">Email: </td>
+                            <td class="col-md-8" id="email"></td>
                         </tr>
                         <tr>
-                            <td>Phone Number:</td>
-                            <td id="phone-number"></td>
+                            <td class="col-md-4">Phone Number:</td>
+                            <td class="col-md-8" id="phone-number"></td>
                         </tr>
                         <tr>
-                            <td>Member since:</td>
-                            <td id="member-since"></td>
+                            <td class="col-md-4">Member since:</td>
+                            <td class="col-md-8" id="member-since"></td>
                         </tr>
                     </tbody>
                 </table>
@@ -99,4 +99,4 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js "></script>
 </body>
 
-</html>s
+</html>
